<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aandacht</string>
    <string name="app_pref">SettingsAandacht</string> <!-- shared preferences id -->
    <string name="action_settings">Settings</string>

    <!-- login -->
    <string name="login_hintLogin">Login</string>
    <string name="login_hintPass">Password</string>
    <string name="login_btnLogin">Log in</string>
    <string name="login_tstFail">Aanmelden mislukt!</string>
    <string name="login_gpsFail">Google playservices mislukt!</string>

    <!-- ViewReports -->
    <string name="reports_title">Aandacht</string>
    <string name="reports_btnCall">Bel 112</string>
    <string name="reports_txtIncidenten">Incidenten</string>
    <string name="action_map">Kaart</string>
    <string name="action_profile">Profiel</string>
    <string name="action_logout">Logout</string>
    <string name="reports_popup_title">Bel 112</string>
    <string name="reports_popup_text">Weet u zeker dat u de nooddiensten wil bellen?
Misbruik is strafbaar!</string>
    <string name="reports_popup_btnCall">Bel</string>
    <string name="reports_popup_btnCancel">Annuleer</string>

    <!-- profile -->
    <string name="profile_banner">U bent aangemeld als </string>
    <string name="title_activity_view_profile">Profile</string>
    <string name="profile_btnEditPicture">Edit picture</string>
    <string name="title_activity_default">defaultActivity</string>
    <string name="title_activity_parent">parentActivity</string>

    <!-- stats -->
    <string name="stats_title_response">gemiddelde\nrespons tijd</string>
    <string name="stats_title_active">totale tijd\nactief</string>
    <string name="stats_value_response">76\nsec.</string>
    <string name="stats_value_active">2391\nuur</string>

    <!-- settings -->
    <string name="settings_active">Notificaties</string>
    <string name="title_activity_view_settings">Instellingen</string>
    <string name="settings_sound">Geluid</string>
    <string name="settings_option_notif">notifications</string>
    <string name="settings_option_sound">sound</string>
    <string name="settings_option_vibrate">vibrate</string>
    <string name="settings_vibrate">Trillen</string>

    <!-- maps -->
    <string name="title_activity_maps">Map</string>

    <!-- tab names -->
    <string name="tab_profile_time">Tijd</string>
    <string name="tab_reports_active">Actief</string>
    <string name="tab_reports_all">Alle</string>
    <string name="tab_reports_mine">Mijn</string>

</resources>
