<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.fragments.ViewSettings">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/settings_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_active"
            android:padding="10dp"
        />

        <CheckBox
            android:id="@+id/settings_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_sound"
            android:padding="10dp"
        />

        <CheckBox
            android:id="@+id/settings_vibrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_vibrate"
            android:padding="10dp"
        />




    </LinearLayout>


</FrameLayout>
