<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_login"
    tools:context=".LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:layout_margin="10dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo_big"
        android:contentDescription="Logo"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/login_txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hintLogin"
        android:singleLine="true"
        >
        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/login_txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hintPass"
        android:inputType="textPassword"
        android:singleLine="true"
        />
    
    <Button
        android:id="@+id/login_btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login_btnLogin"
        android:onClick="login"
        />

    <Button
        android:id="@+id/login_btnGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Nieuwe testdata"
        android:onClick="generate"
        />-

    </LinearLayout>

</RelativeLayout>
